--- a/ProjEric1/Base.lproj/Main.storyboard
+++ b/ProjEric1/Base.lproj/Main.storyboard
@@ -236,10 +236,10 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1LQ-sI-SZb">
-                                            <rect key="frame" x="9" y="9" width="271" height="27"/>
+                                            <rect key="frame" x="9" y="9" width="125" height="27"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UGY-8O-v4f">
-                                            <rect key="frame" x="290" y="9" width="271" height="27"/>
+                                            <rect key="frame" x="144" y="9" width="417" height="27"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -251,7 +251,7 @@
                                         <constraint firstItem="1LQ-sI-SZb" firstAttribute="top" secondItem="61o-hy-4jR" secondAttribute="topMargin" constant="1" id="KOM-g9-gou"/>
                                         <constraint firstItem="UGY-8O-v4f" firstAttribute="trailing" secondItem="61o-hy-4jR" secondAttribute="trailingMargin" constant="1" id="eM1-O4-mEE"/>
                                         <constraint firstItem="1LQ-sI-SZb" firstAttribute="leading" secondItem="61o-hy-4jR" secondAttribute="leadingMargin" constant="1" id="f75-pr-UzG"/>
-                                        <constraint firstItem="1LQ-sI-SZb" firstAttribute="width" secondItem="UGY-8O-v4f" secondAttribute="width" id="j3T-If-kaT"/>
+                                        <constraint firstItem="1LQ-sI-SZb" firstAttribute="width" secondItem="UGY-8O-v4f" secondAttribute="width" multiplier="0.3" id="j3T-If-kaT"/>
                                         <constraint firstItem="1LQ-sI-SZb" firstAttribute="centerY" secondItem="UGY-8O-v4f" secondAttribute="centerY" id="vhm-Vj-qPq"/>
                                         <constraint firstItem="1LQ-sI-SZb" firstAttribute="bottom" secondItem="61o-hy-4jR" secondAttribute="bottomMargin" constant="1" id="xY1-El-E6w"/>
                                     </constraints>
@@ -333,7 +333,7 @@
                                         <constraint firstItem="sus-D4-14E" firstAttribute="top" secondItem="tAt-tV-n5x" secondAttribute="topMargin" constant="1" id="fKh-Mg-PNb"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="DFM-dK-AfX" secondAttribute="bottom" constant="1" id="g3k-vf-3Bk"/>
                                         <constraint firstItem="DFM-dK-AfX" firstAttribute="height" secondItem="sus-D4-14E" secondAttribute="height" id="tWx-gu-2gA"/>
-                                        <constraint firstItem="DFM-dK-AfX" firstAttribute="width" secondItem="sus-D4-14E" secondAttribute="width" multiplier="5" id="yPc-pb-f52"/>
+                                        <constraint firstItem="DFM-dK-AfX" firstAttribute="width" secondItem="sus-D4-14E" secondAttribute="width" multiplier="5" priority="750" id="yPc-pb-f52"/>
                                         <constraint firstItem="sus-D4-14E" firstAttribute="leading" secondItem="tAt-tV-n5x" secondAttribute="leadingMargin" constant="1" id="zBh-2W-8cN"/>
                                     </constraints>
                                 </tableViewCellContentView>
@@ -685,7 +685,7 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="zgV-VD-auN"/>
-        <segue reference="6Ws-O3-7Uy"/>
+        <segue reference="R8x-j1-6Oo"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
 </document>
