--- a/ProjEric1/Base.lproj/Main.storyboard
+++ b/ProjEric1/Base.lproj/Main.storyboard
@@ -868,6 +868,9 @@
                                 <state key="normal" backgroundImage="vision">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="M9u-7H-WQA" kind="push" id="S04-Q7-1qL"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s7M-Dv-r86">
                                 <rect key="frame" x="289" y="74" width="253" height="91"/>
@@ -931,7 +934,52 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6vC-V5-e9g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-961" y="428"/>
+            <point key="canvasLocation" x="-745" y="338"/>
+        </scene>
+        <!--Vision Tutorial-->
+        <scene sceneID="1MA-Pg-p2X">
+            <objects>
+                <viewController id="M9u-7H-WQA" customClass="VisionTutorialViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="XQN-Ou-cLU"/>
+                        <viewControllerLayoutGuide type="bottom" id="CwJ-J1-6B0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Q0f-je-3Q5">
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="276"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pc0-sY-h08">
+                                <rect key="frame" x="26" y="10" width="516" height="197"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xEv-ts-yvq">
+                                <rect key="frame" x="26" y="217" width="516" height="49"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
+                                <color key="textColor" red="0.96862745100000003" green="0.78823529410000004" blue="0.058823529409999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="pc0-sY-h08" secondAttribute="trailing" constant="10" id="Q0F-zf-Xqx"/>
+                            <constraint firstItem="pc0-sY-h08" firstAttribute="leading" secondItem="Q0f-je-3Q5" secondAttribute="leadingMargin" constant="10" id="S07-Uk-jEX"/>
+                            <constraint firstItem="pc0-sY-h08" firstAttribute="height" secondItem="xEv-ts-yvq" secondAttribute="height" multiplier="4" id="Ujm-DG-2Bv"/>
+                            <constraint firstItem="pc0-sY-h08" firstAttribute="centerX" secondItem="xEv-ts-yvq" secondAttribute="centerX" id="chA-E1-KWY"/>
+                            <constraint firstItem="pc0-sY-h08" firstAttribute="width" secondItem="xEv-ts-yvq" secondAttribute="width" id="gWF-uL-34h"/>
+                            <constraint firstItem="CwJ-J1-6B0" firstAttribute="bottom" secondItem="xEv-ts-yvq" secondAttribute="bottom" constant="10" id="hGL-99-wK5"/>
+                            <constraint firstItem="xEv-ts-yvq" firstAttribute="top" secondItem="pc0-sY-h08" secondAttribute="bottom" constant="10" id="kYL-XB-b0W"/>
+                            <constraint firstItem="pc0-sY-h08" firstAttribute="top" secondItem="Q0f-je-3Q5" secondAttribute="topMargin" constant="10" id="yUx-Z6-Cg3"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Vision Tutorial" id="cbZ-YH-X2Z"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <connections>
+                        <outlet property="tutImage" destination="pc0-sY-h08" id="bvS-XS-7HW"/>
+                        <outlet property="tutText" destination="xEv-ts-yvq" id="SjU-9Q-GmZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="W45-P7-f8T" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1364" y="817"/>
         </scene>
         <!--Hearing Tutorial-->
         <scene sceneID="BBV-39-NiY">
@@ -945,20 +993,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="568" height="276"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Text" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Obo-yq-Rt8">
-                                <rect key="frame" x="26" y="30" width="117" height="280"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Obo-yq-Rt8">
+                                <rect key="frame" x="26" y="74" width="117" height="192"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" red="0.96862745098039216" green="0.78823529411764703" blue="0.058823529411764705" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BhU-le-dSg">
-                                <rect key="frame" x="153" y="30" width="389" height="195"/>
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BhU-le-dSg">
+                                <rect key="frame" x="153" y="74" width="389" height="122"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Aqd-hb-9Ea">
-                                <rect key="frame" x="153" y="252" width="126" height="39"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Aqd-hb-9Ea">
+                                <rect key="frame" x="153" y="223" width="126" height="24"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ASd-FM-XmB">
-                                <rect key="frame" x="289" y="259" width="85" height="26"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ASd-FM-XmB">
+                                <rect key="frame" x="289" y="227" width="85" height="16"/>
                                 <color key="backgroundColor" red="0.97647058819999999" green="0.81960784310000001" blue="0.039215686270000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="PREVIOUS">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -968,8 +1016,8 @@
                                     <action selector="PreviousClicker:" destination="uSE-ar-7H8" eventType="touchUpInside" id="Ril-Cr-oRV"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zv9-Uh-zwD">
-                                <rect key="frame" x="384" y="259" width="84" height="26"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zv9-Uh-zwD">
+                                <rect key="frame" x="384" y="227" width="84" height="16"/>
                                 <color key="backgroundColor" red="0.97647058819999999" green="0.81960784310000001" blue="0.039215686270000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="NEXT">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -979,8 +1027,8 @@
                                     <action selector="NextClicker:" destination="uSE-ar-7H8" eventType="touchUpInside" id="pq5-2A-sj4"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Duw-OB-Wae">
-                                <rect key="frame" x="478" y="259" width="84" height="26"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Duw-OB-Wae">
+                                <rect key="frame" x="478" y="227" width="84" height="16"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="SKIP">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -1032,7 +1080,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tCD-Za-45h" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-961" y="849"/>
+            <point key="canvasLocation" x="-778" y="817"/>
         </scene>
     </scenes>
     <resources>
