--- a/ProjEric1/Base.lproj/Main.storyboard
+++ b/ProjEric1/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="tAG-yw-Ur8">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="0.80000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="tAG-yw-Ur8">
                                 <rect key="frame" x="287" y="30" width="253" height="31"/>
                                 <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="minimumTrackTintColor" red="0.96862745100000003" green="0.78823529410000004" blue="0.058823529409999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -225,7 +225,7 @@
                         <viewControllerLayoutGuide type="bottom" id="qRt-27-c06"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="QXi-4O-v8q">
-                        <rect key="frame" x="0.0" y="0.0" width="568" height="276"/>
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zwa-bV-QrE">
@@ -257,13 +257,6 @@
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="vOI-Nf-57v" appends="YES" id="AEs-km-CnA"/>
                                     <outletCollection property="gestureRecognizers" destination="jvT-88-C5g" appends="YES" id="LeR-0n-nXF"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mdd-cA-k9J">
-                                <rect key="frame" x="256" y="151" width="56" height="30"/>
-                                <state key="normal" title="Try Me!"/>
-                                <connections>
-                                    <action selector="TryMeClick:" destination="UHQ-9q-nkA" eventType="touchUpInside" id="iw6-AS-jIS"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -585,12 +578,12 @@
             <objects>
                 <tableViewController title="More" id="uYm-9r-mAE" customClass="MoreMenuTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="sdg-Pr-1iA">
-                        <rect key="frame" x="0.0" y="0.0" width="568" height="276"/>
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MoreTableCell" id="tua-Ni-Skh" customClass="MoreItemTableViewCell">
-                                <rect key="frame" x="0.0" y="92" width="568" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="568" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tua-Ni-Skh" id="tAt-tV-n5x">
                                     <rect key="frame" x="0.0" y="0.0" width="568" height="43"/>
@@ -1275,11 +1268,11 @@
         <image name="vision" width="445" height="455"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="jDW-C5-fqg"/>
-        <segue reference="fdK-WP-C9C"/>
-        <segue reference="4rs-wG-8jN"/>
-        <segue reference="el7-3f-xcg"/>
         <segue reference="XlQ-BU-GeM"/>
+        <segue reference="w8g-nJ-6oQ"/>
+        <segue reference="4rs-wG-8jN"/>
+        <segue reference="jDW-C5-fqg"/>
+        <segue reference="el7-3f-xcg"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
 </document>
