--- a/ProjEric1/Base.lproj/Main.storyboard
+++ b/ProjEric1/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="VYG-Kh-kor">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="VYG-Kh-kor">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
@@ -1272,8 +1272,8 @@
         <image name="vision" width="445" height="455"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="XlQ-BU-GeM"/>
         <segue reference="w8g-nJ-6oQ"/>
+        <segue reference="2pE-Jz-3jf"/>
         <segue reference="4rs-wG-8jN"/>
         <segue reference="jDW-C5-fqg"/>
         <segue reference="el7-3f-xcg"/>
